deploy/base/receiver/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: receiver
  labels:
    app: receiver
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: receiver
