deploy/base/receiver/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: receiver
  labels:
    app: receiver
spec:
  to:
    kind: Service
    name: receiver
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
